[FIX]: Remove z-index from SearchBar select

--- a/client/src/components/atoms/SearchBar/_index.scss
+++ b/client/src/components/atoms/SearchBar/_index.scss
@@ -67,7 +67,6 @@ input {
 		top: 45%;
 		right: 3px;
 		content: '';
-		z-index: 98;
 		&:hover {
 			cursor: pointer;
 		}
